# phelps

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  Dockerfile  Makefile  README.md  cmake_install.cmake  compose.yaml  doing.txt  index.html  kernel_shader.frag  out.js  publish_page.sh
dependencies/: CMakeLists.txt
dependencies/imgui-sfml/: CMakeLists.txt
embuild/: CMakeCache 2.txt  CMakeCache 3.txt  Makefile 2  cmake_install.cmake  phelps.html  phelps.js  phelps.wasm
src/: CMakeLists.txt  Makefile  adjacentParticles.cpp  adjacentParticles.hpp  cmake_install.cmake  fluid.cpp  fluid.hpp  grid.cpp  grid.hpp  gridView.cpp  gridView.hpp  main.cpp  phelps  sfmlFluid.cpp  sfmlFluid.hpp  vec.hpp
src/draw/: renderParams.hpp  sfmlFluid.cpp  sfmlFluid.hpp  ui.cpp  ui.hpp
src/draw/sdl/: circle.cpp  circle.h  sdlFluid.cpp  sdlFluid.hpp
src/draw/sfml/: ui.cpp
src/fluid/: adjacentParticles.cpp  adjacentParticles.hpp  fluid.cpp  fluid.hpp  fluidParams.hpp  grid.cpp  grid.hpp  gridView.hpp  particle.hpp  particles.hpp  vec.hpp
wasm/: build.js  build.sh  buildwasm.sh  bundle.js  index.html  package-lock.json  package.json
wasm/pkg/: index.js
wasm/pkg/phelps/: index.js  phelpss.js
